objects/ASI_KOR_POSM_Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Item_Code__c</fullName>
        <formula>ASI_KOR_Item_Name__r.ASI_KOR_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Name_Kor__c</fullName>
        <formula>ASI_KOR_Item_Name__r.ASI_KOR_Item_Name_Kor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Name (Kor)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use these search terms to filter the list of POSM products:
*IP, *BAL, *OAB, *OJC, *MUC, *NJC, *NWY, *TGL</inlineHelpText>
        <label>Item Name</label>
        <referenceTo>ASI_KOR_POSM_Product__c</referenceTo>
        <relationshipLabel>POSM Order Details</relationshipLabel>
        <relationshipName>POSM_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_POSM_Order_Request__c</fullName>
        <label>POSM Order Request</label>
        <referenceTo>ASI_KOR_POSM_Order_Request__c</referenceTo>
        <relationshipLabel>POSM Order Details</relationshipLabel>
        <relationshipName>ASI_KOR_POSM_Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Request_ETA_Date__c</fullName>
        <label>Request ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_FILTER_POSM_SUB_BRAND__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for filtering input box when adding new POSM product</description>
        <label>SYS_FILTER_POSM_SUB_BRAND</label>
        <referenceTo>ASI_KOR_POSM_Product_Sub_Brand__c</referenceTo>
        <relationshipLabel>SYS POSM Order Details</relationshipLabel>
        <relationshipName>ASI_KOR_SYS_Filter_POSM_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Creator_Commission_Code__c</fullName>
        <formula>CreatedBy.ASI_KOR_Commission_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Creator_Commission_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Header_Create_By__c</fullName>
        <formula>ASI_KOR_POSM_Order_Request__r.ASI_KOR_SYS_INFO_Requestor_Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Header_Create_By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Header_Request_Status__c</fullName>
        <formula>TEXT(ASI_KOR_POSM_Order_Request__r.ASI_KOR_Request_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Header_Request_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Header_SFID__c</fullName>
        <formula>ASI_KOR_POSM_Order_Request__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Header_SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_ITEM_NAME__c</fullName>
        <formula>ASI_KOR_Item_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_ITEM_NAME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_ITEM_UNIT_CASE__c</fullName>
        <formula>ASI_KOR_Item_Name__r.ASI_KOR_Unit_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_ITEM_UNIT_CASE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_ITEM_UOM__c</fullName>
        <formula>TEXT(ASI_KOR_Item_Name__r.ASI_KOR_UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_ITEM_UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Item_Code__c</fullName>
        <formula>ASI_KOR_Item_Name__r.ASI_KOR_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Item_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Item_Name_Kor__c</fullName>
        <formula>ASI_KOR_Item_Name__r.ASI_KOR_Item_Name_Kor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Item_Name_Kor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SequenceNumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Ship_To_Address__c</fullName>
        <label>Ship To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Shipment_Date__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>POSM Order Details</relationshipLabel>
        <relationshipName>POSM_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>POSM Order Details (Account)</relationshipLabel>
        <relationshipName>POSM_Order_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Competitor_Brand__c</fullName>
        <label>Competitor Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_C_S__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Status__c</fullName>
        <formula>TEXT(ASI_KOR_POSM_Order_Request__r.ASI_KOR_Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Supplier_Email__c</fullName>
        <label>Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Vendor_Code__c</fullName>
        <formula>ASI_KOR_Supplier__r.ASI_MFM_Customer_Supplier_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_PRK_Capa__c</fullName>
        <formula>ASI_MFM_Venue__r.ASI_KOR_Venue_Tot_PR_KOR_Whisky_CAPA__c + ASI_MFM_Venue__r.ASI_KOR_Venue_Tot_PRK_White_Spirits_CAPA__c+ ASI_MFM_Venue__r.ASI_KOR_Venue_PR_Korea_Vodka_CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PRK Capa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>POSM Order Details (Venue)</relationshipLabel>
        <relationshipName>POSM_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POSM Order Detail</label>
    <nameField>
        <displayFormat>POD-{00000}</displayFormat>
        <label>POSM Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Order Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_POSM_Order_Detail</fullName>
        <active>true</active>
        <label>KOR POSM Order Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_HV_POSM_Order_Detail</fullName>
        <active>true</active>
        <label>KOR HV POSM Order Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_POSM_Item_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(ASI_KOR_POSM_Order_Request__r.ASI_KOR_Request_Status__c ) &lt;&gt; &quot;New&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;ASI KOR System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator GDT&quot;</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The POSM Order Request Item cannot be edited because the POSM Order Request has already been submitted.</errorMessage>
    </validationRules>
</CustomObject>